--- a/windfreak/SG_scope_driver.ipynb
+++ b/windfreak/SG_scope_driver.ipynb
@@ -126,10 +126,12 @@
     }
    ],
    "source": [
+    "#scope view settings\n",
     "time_div = 1e-3\n",
     "t_offset = 9e-3\n",
     "offset = -0.6\n",
     "\n",
+    "#reflection channel\n",
     "channel = 3\n",
     "scope.write(f\":CHAN{channel}:DISP 1\")\n",
     "scale = 0.2\n",
@@ -225,6 +227,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "synthd.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -264,7 +275,6 @@
     "power_scan = np.linspace(-15, 8, 50)\n",
     "fre_scan = np.linspace(1700e6,2700e6,50)\n",
     "\n",
-    "scan_datas = []\n",
     "for rf_fre in fre_scan:\n",
     "    synthd[rf_out].enable = False\n",
     "    ini_rev_data = get_rev_trace(scope, [channel])\n",
@@ -288,11 +298,76 @@
     "        #time.sleep(1)\n",
     "    pow_max = power_scan[fir_amp.index(max(fir_amp))]\n",
     "    scan_data.append([rf_fre,pow_max])\n",
-    "    scan_datas.append(scan_data)\n",
     "    pow_max_all.append(pow_max)\n",
     "    zero_amp_all.append(zero_amp)\n",
     "    fir_amp_all.append(fir_amp)\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bayesian Optimization\n",
+    "from bayes_opt import BayesianOptimization\n",
+    "\n",
+    "# Bounded region of parameter space\n",
+    "pbounds = {'x': (-15, 10)}\n",
+    "\n",
+    "synthd[rf_out].enable = False\n",
+    "zero_amp_all = []\n",
+    "fir_amp_all = []\n",
+    "pow_max_all = []\n",
+    "scan_data = []\n",
+    "power_scans = []\n",
+    "fre_scan = np.linspace(1700e6,2700e6,50)\n",
+    "\n",
+    "for rf_fre in fre_scan:\n",
+    "    synthd[rf_out].enable = False\n",
+    "    ini_rev_data = get_rev_trace(scope, [channel])\n",
+    "    ini_peak = ini_peak_search(ini_rev_data)\n",
+    "    ini_reso = reso_det(ini_peak)\n",
+    "    zero_amp = []\n",
+    "    fir_amp = []\n",
+    "    power_scan = []\n",
+    "    synthd[rf_out].frequency = rf_fre\n",
+    "    synthd[rf_out].enable = True\n",
+    "    \n",
+    "    def fir_amp(shdpower):\n",
+    "        synthd[rf_out].power = shdpower\n",
+    "        mod_rev_data  = get_rev_trace(scope, [channel])\n",
+    "        #time.sleep(1)\n",
+    "        mod_peak = mod_peak_search(mod_rev_data)\n",
+    "        mod_zero_peak1, mod_zero_peak2, mod_zero_amp = zero_measure(mod_rev_data, ini_peak, mod_peak, ini_reso)\n",
+    "        mod_fir_peak, mod_fir_amp = fir_measure(mod_rev_data, ini_peak, mod_peak, rf_fre,ini_reso)\n",
+    "        if mod_fir_peak == mod_zero_peak2:\n",
+    "            mode_fir_amp = 0.05\n",
+    "        power_scan.append(shdpower)\n",
+    "        zero_amp.append(mod_zero_amp)\n",
+    "        fir_amp.append(mod_fir_amp)\n",
+    "        return mode_fir_amp\n",
+    "\n",
+    "    optimizer = BayesianOptimization(\n",
+    "    f=fir_amp,\n",
+    "    pbounds=pbounds,\n",
+    "    random_state=1,\n",
+    "    )\n",
+    "    \n",
+    "    optimizer.maximize(\n",
+    "    init_points=2,\n",
+    "    n_iter=30,\n",
+    "    )\n",
+    "        \n",
+    "\n",
+    "    pow_max = power_scan[fir_amp.index(max(fir_amp))]\n",
+    "    scan_data.append([rf_fre,pow_max])\n",
+    "    pow_max_all.append(pow_max)\n",
+    "    zero_amp_all.append(zero_amp)\n",
+    "    fir_amp_all.append(fir_amp)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -456,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
