--- a/windfreak/SG_scope_driver.ipynb
+++ b/windfreak/SG_scope_driver.ipynb
@@ -1723,11 +1723,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "synthd.open()"
+    "synthd.close()"
    ]
   },
   {
