--- a/windfreak/SG_linien_driver.ipynb
+++ b/windfreak/SG_linien_driver.ipynb
@@ -88,24 +88,18 @@
     "    time.sleep(1)\n",
     "    synthd[rf_out].power = -60\n",
     "    ini_peak, ini_reso = ini_peak_search(c)\n",
-    "    # print(ini_peak/1024-1)\n",
-    "    # print(ini_peak)\n",
     "    zero_amp = []\n",
     "    fir_amp = []\n",
     "\n",
     "    for shdpower in tqdm.tqdm(power_scan):\n",
+    "\n",
     "        synthd[rf_out].frequency = rf_fre\n",
     "        synthd[rf_out].power = shdpower\n",
-    "        set_scan_range(c, 0, 1)\n",
-    "        time.sleep(1)\n",
-    "        mod_rev_data  = get_waveform(c)\n",
-    "        mod_peak = mod_peak_search(mod_rev_data)\n",
-    "        while len(mod_peak) == 0:\n",
-    "            mod_rev_data  = get_waveform(c)\n",
-    "            mod_peak = mod_peak_search(mod_rev_data)\n",
+    "        time.sleep(0.5)\n",
+    "        mod_rev_data, mod_peak = mod_peak_search(c)\n",
+    "\n",
     "        mod_zero_peak1, mod_zero_peak2, mod_zero_amp = zero_measure(mod_rev_data, ini_peak, mod_peak, ini_reso)\n",
-    "        # print(mod_zero_peak1/1024-1, 2*mod_zero_peak1/1024-1)\n",
-    "        \n",
+    "                \n",
     "        mod_fir_peak, mod_fir_amp = fir_measure(c, mod_rev_data, ini_peak, mod_peak, rf_fre,ini_reso)\n",
     "        \n",
     "        zero_amp.append(mod_zero_amp)\n",
