--- a/windfreak/SG_scope_driver.old.ipynb
+++ b/windfreak/SG_scope_driver.old.ipynb
@@ -373,27 +373,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fir_amp_all' is not defined",
+     "ename": "EOFError",
+     "evalue": "Ran out of input",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2024_1_11_NLTL_powerscan_20MHzstep_fir_amp_all.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[1;32m----> 3\u001b[0m     pickle\u001b[38;5;241m.\u001b[39mload(fir_amp_all, handle, protocol\u001b[38;5;241m=\u001b[39mpickle\u001b[38;5;241m.\u001b[39mHIGHEST_PROTOCOL)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2024_1_11_NLTL_powerscan_20MHzstep_zero_amp_all.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[0;32m      5\u001b[0m     pickle\u001b[38;5;241m.\u001b[39mload(zero_amp_all, handle, protocol\u001b[38;5;241m=\u001b[39mpickle\u001b[38;5;241m.\u001b[39mHIGHEST_PROTOCOL)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fir_amp_all' is not defined"
+      "\u001b[1;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2024_1_11_NLTL_powerscan_20MHzstep_fir_amp_all.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[1;32m----> 3\u001b[0m     fir_amp_all\u001b[38;5;241m=\u001b[39m\u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2024_1_11_NLTL_powerscan_20MHzstep_zero_amp_all.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[0;32m      5\u001b[0m     zero_amp_all\u001b[38;5;241m=\u001b[39mpickle\u001b[38;5;241m.\u001b[39mload(handle)\n",
+      "\u001b[1;31mEOFError\u001b[0m: Ran out of input"
      ]
     }
    ],
    "source": [
     "import pickle\n",
-    "with open('2024_1_11_NLTL_powerscan_20MHzstep_fir_amp_all.pickle', 'wb') as handle:\n",
-    "    pickle.load(fir_amp_all, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "with open('2024_1_11_NLTL_powerscan_20MHzstep_zero_amp_all.pickle', 'wb') as handle:\n",
-    "    pickle.load(zero_amp_all, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "with open('2024_1_11_NLTL_powerscan_20MHzstep_fir_amp_all.pickle', 'rb') as handle:\n",
+    "    fir_amp_all=pickle.load(handle)\n",
+    "with open('2024_1_11_NLTL_powerscan_20MHzstep_zero_amp_all.pickle', 'rb') as handle:\n",
+    "    zero_amp_all=pickle.load(handle)\n",
     "\n"
    ]
   },
@@ -540,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
