--- a/windfreak/SG_linien_driver.ipynb
+++ b/windfreak/SG_linien_driver.ipynb
@@ -475,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1d524cb2c50>]"
+       "[<matplotlib.lines.Line2D at 0x1d52afd31d0>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,6 +505,26 @@
     "plt.scatter(fre_scan,pow_max_all)\n",
     "filtered_data = savgol_filter(pow_max_all, 15, 3)\n",
     "plt.plot(fre_scan, filtered_data, color='orange')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.2473684210526321"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(pow_max_all)"
    ]
   },
   {
