--- a/windfreak/SG_linien_driver.ipynb
+++ b/windfreak/SG_linien_driver.ipynb
@@ -136,7 +136,7 @@
     "                        c.fir_measure(rf_fre)\n",
     "                        if time.time() - start > 2:\n",
     "                            break\n",
-    "                fir_amp.append(c.fir_amp)\n",
+    "                fir_amp[i]=c.fir_amp\n",
     "        pow_max = power_scan[np.where(fir_amp==max(fir_amp))[0]]    \n",
     "        scan_data.append([rf_fre,pow_max])\n",
     "        fir_amps.append(fir_amp)\n",
@@ -146,13 +146,7 @@
     "    \n",
     "    import pickle\n",
     "    with open(f'2024_4_1_NLTL4_powerscan_5MHzstep_fir_amp_all-{j}.pickle', 'wb') as handle:\n",
-    "        pickle.dump(fir_amp_all, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "        pickle.dump(pow_max_all, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "        pickle.dump(fre_scan, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "\n",
-    "\n",
-    "\n",
-    "        "
+    "        pickle.dump(fir_amp_all, handle, protocol=pickle.HIGHEST_PROTOCOL)       "
    ]
   },
   {
